<resources>
    <string name="app_name">TSUNAGU</string>
    <string name="login_text">ログイン</string>
    <string name="createAcount_text">新規登録</string>
    <string name="name_text">名前</string>
    <string name="mail_text">メールアドレス</string>
    <string name="password_text">パスワード</string>
    <string name="register_text">登録</string>
    <string name="back_text">戻る</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search_text">さがす</string>
    <string name="etcText">その他</string>
    <string name="cat_serch">猫を探す</string>
    <string name="dog_search">犬を探す</string>
    <string name="age_text">年齢</string>
    <string name="gender_text">性別</string>
    <string name="area_text">地域</string>
    <string name="osu_text">おす</string>
    <string name="mesu_text">めす</string>
    <string name="touroku_text">登録</string>
</resources>
