<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/headView"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:layout_weight="1.0"
                app:srcCompat="@drawable/character" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:text="新着"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newPetsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="right"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/dogBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:text="@string/dog_search" />

            <Button
                android:id="@+id/catBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:text="@string/cat_serch" />

            <Button
                android:id="@+id/etcBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.2"
                android:text="@string/etcText" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>